simple/test/features/errors/semantic/e1044_tuple_index_oob.spl
# E1044: Tuple Index Out of Bounds

Feature: E1044 - Tuple Index Out of Bounds
  As a Simple compiler
  I want to detect tuple indices that exceed tuple size
  So that tuple access is within bounds

  Background:
    Given I have the Simple compiler

  Scenario: Index beyond tuple size
    When I compile:
      '''
      fn test():
        val pair = (10, 20)
        val x = pair.2  # Error: index 2 in 2-element tuple
      '''
    Then I should see error E1044 at line 3
    And the error message should be "tuple index {index} out of range for tuple of size {size}"
    And the label should indicate "index out of bounds"
    And the help should suggest "tuple indices must be in range [0, {size})"

  Scenario: Valid tuple access
    When I compile:
      '''
      fn test():
        val triple = (1, 2, 3)
        val a = triple.0
        val b = triple.1
        val c = triple.2
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val pair = (1, 2)
        val x = pair.5
      '''
    Then I should see error E1044
    And the error message should contain "튜플 인덱스 범위 초과"
